# AIFFEL_quest_rs

./: .gitignore  README.md  pyproject.toml
Exploration/Ex01/: ex01.ipynb
Exploration/Ex02/: README.md  ex02.ipynb
Exploration/Ex03/: ex03.ipynb
Exploration/Ex04/: ex04.ipynb
Exploration/Ex05/: ex05.ipynb
Exploration/Playground/: AIFFEL_playground01.ipynb  playground.ipynb
aiffel_quest_rs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
