[project]
name = "aiffel-quest-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.15"
dependencies = [
    "accelerate>=1.13.0",
    "gensim==4.3.2",
    "ipykernel>=7.2.0",
    "konlpy>=0.6.0",
    "mecab-python3>=1.0.12",
    "nltk==3.6.7",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.2.0",
    "pixellib>=0.7.1",
    "scikit-learn>=1.9.0",
    "scipy==1.12.0",
    "seaborn>=0.13.2",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchinfo>=1.8.0",
    "torchvision==0.22.1",
    "transformers>=5.9.0",
]
